# test

./: .gitignore  README.md
project_test/: pyproject.toml
project_test/src/: manage.py
project_test/src/api/: serializers.py  urls.py  views.py
project_test/src/api/migrations/: 0001_initial.py
project_test/src/two_tests/: settings.py  wsgi.py
src/api/: models.py  serializers.py
src/two_tests/: asgi.py
