[tool.poetry]
name = "project-test"
version = "0.1.0"
description = ""
authors = ["borrrv <vrboroday@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_test"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
djangorestframework = "3.12.4"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
